--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@angular/platform-browser": "^12.2.13",
     "@angular/platform-browser-dynamic": "^12.2.13",
     "@angular/router": "^12.2.13",
-    "cypress": "^9.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,13 +34,13 @@
     "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.36",
+    "cypress": "^9.1.0",
     "jasmine-core": "~3.8.0",
     "karma": "^6.3.7",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5",
-    "cypress": "latest"
+    "typescript": "~4.3.5"
   }
 }
