--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "typescript-optional": "^3.0.0-alpha.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
